# t3-fractals-dart

./: .gitignore  README.md  autopush.sh  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: analyze.yml  fractal-ci.yml
example/: example.dart  example2.dart  example3.dart
lib/: demo_fractal.dart  fractal.dart  main.dart  tacit_knowledge_param.dart  test_fractal.dart
lib/burningship/: .gitignore  CMakeLists.txt  burningship.cpp  burningship.def  burningship.h
lib/complex/: complex.dart  complex_tests.dart
lib/src/: complex.dart  fractal.dart  fractal_base.dart
test/: fractal_test.dart  unit-tests-fractal.dart
